--- a/DigitalMobileBank/DigitalMobileBank/DigitalMobileBank.csproj
+++ b/DigitalMobileBank/DigitalMobileBank/DigitalMobileBank.csproj
@@ -57,13 +57,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
-		<PackageReference Include="Syncfusion.Maui.Buttons" Version="28.1.39" />
-		<PackageReference Include="Syncfusion.Maui.Cards" Version="28.1.39" />
-		<PackageReference Include="Syncfusion.Maui.Carousel" Version="28.1.39" />
-		<PackageReference Include="Syncfusion.Maui.TabView" Version="28.1.39" />
+		<PackageReference Include="Syncfusion.Maui.Buttons" Version="28.1.37" />
+		<PackageReference Include="Syncfusion.Maui.Cards" Version="28.1.37" />
+		<PackageReference Include="Syncfusion.Maui.Carousel" Version="28.1.37" />
+		<PackageReference Include="Syncfusion.Maui.TabView" Version="28.1.37" />
 		<PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.0.3" />
 	</ItemGroup>
 
